syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "GYM.GrpcService";

package visitors;

// The visitors Serves definition
service VisitorsService {
  // Sends a greeting

  rpc GetVisitors (google.protobuf.Empty) returns (ListVisitorsReply)
  {
       option (google.api.http) = {
      get: "/v1/visitors"
    };
  }
  rpc GetVisitor(IdVisitorsRequest) returns (VisitorReply)
   {
       option (google.api.http) = {
      get: "/v1/visitors/{id}"
    };
  }

  rpc CreateVisitor(CreateVisitorRequest) returns (google.protobuf.Empty)
  {
       option (google.api.http) = {
      post: "/v1/visitor"
      body:"*"
    };
  }

  rpc UpdateVisitor(UpdateVisitorRequest) returns (VisitorReply)
  {
      option (google.api.http) = {
      put: "/v1/visitor"
      body:"*"
    };
  }
  rpc DeleteVisitor(IdVisitorsRequest) returns (VisitorReply)
  {
       option (google.api.http) = {
      delete: "/v1/visitors/{id}"
    };
  }
}

// The request message containing the user's name.

message IdVisitorsRequest 
{
    int32 id = 1;
}

message CreateVisitorRequest 
{
    string firstName = 1;
    string lastName = 2;
}
message UpdateVisitorRequest
{
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
}


// The response message containing the greetings.

message ListVisitorsReply{
  repeated VisitorReply visitors = 1;
}
 
message VisitorReply {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
}
